agrega documentacion para los metodos
